[project]
name = "fpf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.29.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "openai>=1.77.0",
    "python-dotenv>=1.1.0",
]
